appId: host.exp.exponent
---
- tapOn: Añadir tarea o hábito
- inputText: E2E tarea rápida
- pressKey: ENTER
- pressKey: BACK
- assertVisible: E2E tarea rápida
